index.css
/* font-family: 'Bebas Neue', cursive;
font-family: 'Inconsolata', monospace;
font-family: 'Roboto', sans-serif;
font-family: 'Yeseva One', cursive; */

body {
    -ms-overflow-style: none;
    scrollbar-width: none;
    overflow-x: hidden;
}

body::-webkit-scrollbar {
    display: none;
}

:root {
    --bs-body-font-family: 'Roboto', sans-serif;
}

.container-fluid {
    padding: 0;
}

a {
    text-decoration: none;
}

.col {
    display: flex;
    justify-content: center;
    align-items: center;
}

.navbar.scrolled {
    background-color: #ffffff;
}

.scrolled .navbar-brand {
    color: #5b3590;
}

.bg-transparent .navbar-brand:hover {
    filter: invert(30%) sepia(90%) saturate(4529%) hue-rotate(200deg) brightness(100%) contrast(104%);
}

.bg-transparent .navbar-icon:hover {
    filter: invert(30%) sepia(90%) saturate(4529%) hue-rotate(200deg) brightness(100%) contrast(104%);
}

.bg-transparent .top-bar,
.bg-transparent .mid-bar,
.bg-transparent .bot-bar {
    background-color: rgb(255, 255, 255);
}

.navbar {
    --bs-navbar-brand-color: #5b3590;
    --bs-navbar-brand-hover-color: #5b3590;
    --bs-navbar-active-color: rgb(200, 48, 101);
    transition: background-color 300ms ease;
}

.navbar-brand {
    color: white;
    font-weight: bold;
    padding-left: 3%;
    transition: color 200ms ease;
}

.navbar-brand:hover {
    filter: invert(92%) sepia(93%) saturate(6758%) hue-rotate(170deg) brightness(91%) contrast(86%);
}

.nav-link {
    font-weight: bold;
    padding-left: 3%;
    transition: color 200ms ease;
    color: rgba(106, 78, 144, 0.858);
    --bs-nav-link-hover-color: rgba(106, 78, 144, 1);
}

.nav-link:hover {
    color: rgb(106, 78, 144);
    filter: invert(92%) sepia(93%) saturate(6758%) hue-rotate(170deg) brightness(91%) contrast(86%);
}

footer .nav-link {
    color: white;
}

.navbar-toggler {
    border: none;
    display: flex;
    justify-content: center;
    align-items: center;
}

.navbar-toggler:focus {
    text-decoration: none;
    outline: 0;
    box-shadow: none;
}

.navbar-icon {
    width: 30px;
    height: 30px;
    animation-duration: .2s;
    animation-timing-function: ease-in-out;
}

.navbar-icon:hover {
    filter: invert(92%) sepia(93%) saturate(6758%) hue-rotate(170deg) brightness(91%) contrast(86%);
}

.top-bar,
.mid-bar,
.bot-bar {
    width: 20px;
    height: 4px;
    margin: 4.25px 5px;
    background-color: rgb(106, 78, 144);
    transition: background-color 200ms ease;
}

.navbar-open>.top-bar {
    animation-fill-mode: forwards;
    animation-name: top-bar-rotate;
    animation-duration: .2s;
    animation-timing-function: ease-in-out;
}

@keyframes top-bar-rotate {
    0% {
        width: 20px;
        transform: translateY(0px) rotate(0deg);
    }
    100% {
        width: 22px;
        transform: translateY(8px) rotate(45deg);
    }
}

.navbar-open>.mid-bar {
    animation-fill-mode: forwards;
    animation-name: mid-bar-fade-out;
    animation-duration: .1s;
}

@keyframes mid-bar-fade-out {
    0% {
        opacity: 100%;
    }
    100% {
        opacity: 0%;
    }
}

.navbar-open>.bot-bar {
    animation-fill-mode: forwards;
    animation-name: bot-bar-rotate;
    animation-duration: .2s;
    animation-timing-function: ease-in-out;
}

@keyframes bot-bar-rotate {
    0% {
        width: 20px;
        transform: translateY(0px) rotate(0deg);
    }
    100% {
        width: 22px;
        transform: translateY(-8px) rotate(-45deg);
    }
}

.navbar-closed>.top-bar {
    animation-fill-mode: forwards;
    animation-name: top-bar-unrotate;
    animation-duration: .2s;
    animation-timing-function: ease-in-out;
}

@keyframes top-bar-unrotate {
    0% {
        width: 22px;
        transform: translateY(8px) rotate(45deg);
    }
    100% {
        width: 20px;
        transform: translateY(0px) rotate(0deg);
    }
}

.navbar-closed>.mid-bar {
    animation-fill-mode: forwards;
    animation-name: mid-bar-fade-in;
    animation-duration: .1s;
}

@keyframes mid-bar-fade-in {
    0% {
        opacity: 0%;
    }
    100% {
        opacity: 100%;
    }
}

.navbar-closed>.bot-bar {
    animation-fill-mode: forwards;
    animation-name: bot-bar-unrotate;
    animation-duration: .2s;
    animation-timing-function: ease-in-out;
}

@keyframes bot-bar-unrotate {
    0% {
        width: 22px;
        transform: translateY(-8px) rotate(-45deg);
    }
    100% {
        width: 20px;
        transform: translateY(0px) rotate(0deg);
    }
}

.navbar-open .navbar-brand {
    color: #5b3590;
}

.landing-wrapper {
    height: 100%;
    overflow: hidden;
}

video {
    object-fit: cover;
}

.heading {
    position: absolute;
    z-index: 1;
    justify-self: flex-start;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    text-align: center;
    font-weight: bold;
    color: #ffffff;
}

.header {
    font-size: 40px;
}

.subheader {
    font-size: 20px;
}

#pulldown {
    height: 50px;
    width: 50px;
    background-image: url("resources/chevron-compact-down.svg");
    transform: translateY(300px);
    filter: brightness(0) invert(1);
    background-size: cover;
    background-repeat: no-repeat;
}

.section-size {
    min-height: 784px;
    height: calc(110vh - 56px);
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 10%;
    color: rgb(106, 78, 144);
}

.section-size h2 {
    color: rgba(106, 78, 144, 0.841);
}

.section-name {
    display: flex;
    justify-content: center;
}

h2 {
    font-size: 70px;
    font-weight: 600;
    padding-bottom: 5%;
}

.desc {
    margin: auto;
    padding: 5%;
}

h3 {
    text-transform: uppercase;
    color: #4866b1;
    font-size: 30px;
    font-family: 'Roboto Slab', serif;
    font-weight: 900;
    text-align: center;
    margin: 0 auto;
    margin-bottom: 5%;
}

p {
    font-size: 15px;
    font-family: 'Inconsolata', monospace;
    color: rgb(77, 77, 77);
    width: 80%;
    text-align: center;
    margin: 0 auto;
}
/* ... */

